Sun Nov 12 16:05:00 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* geist now requires giblib.

Fri Oct 27 01:54:49 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Style loading/saving to an ascii format now works. We have our
	own, but guess what? We can load EFM font styles (there are a few
	of them around) as well :-)

Fri Oct 27 01:15:13 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Changed style format slightly to make styles independant of the
	colour of the text having a style applied (before that too was
	defined in the style). Now text objects have their r,g,b,a values
	back, and these are applied to any style bit with r=g=b=a=0. This
	also means you can have a style defining that the main coloured
	layer is behind another layer, for glow effects etc. A style can
	exist without a r=g=b=a=0 bit, but it's rather silly, as the
	actual text colour would never be applied ;-)

Wed Oct 26 00:05:49 2000  Till Adam  <till@adam-lilienthal.de>
        
	*font style editor. it renders to the document in realtime, but
	pressing cancel discards the changes. I ripped most of the gui from
	the font style editor for efm by dphase@dphase.net. thanks dude :)
	* fixed Dickie Giblets geist_list_move_up/down_by_one funcs and
	added geist_list_add_at_pos for easier shuffling around of bits in
	the list
	* needs a clear/reset button and the load/save_style buttons need to
	actually do something :) 

Mon Oct 23 23:06:55 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Funcs to move list items up and down.

Sat Oct 21 15:53:25 2000  Till Adam  <till@adam-lilienthal.de>
        
	* clicking on an empty area of the document and dragging 
	will now draw a selection rectangle. Shift toggles the selection.
	Any suggestions for the color of this thingy ? Should we make that
	configurable? Who prefers a line rect (not filled)?

Fri Oct 20 00:22:54 2000  Dickie Gilbert  <gilbertt@linuxbrit.co.uk>

	* Working text styles. There is no UI for editing/creating these