@@ -1,3 +1,10 @@
+Wed Nov 22 23:06:02  Till Adam  <till@adam-lilienthal.de>
+
+        *added polygon resize. theres only one mode now which will soon
+	become strech mode. The other one, zoom, will grow or shrink the
+	poly proportionally from the center point.
+
+
 Sun Nov 12 16:05:00 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* geist now requires giblib.
